syntax = "proto3";

option go_package = "./api";

package port_domain;

service PortDomain {
  	rpc Create(PortRequest) returns (Empty) {}
	rpc Get(GetRequest) returns(PortResponse) {}
}

message PortRequest {
	string id = 1;
	string name = 2;
	string city = 3;
	string country = 4;
	repeated string alias = 5;
	repeated string regions = 6;
	repeated double coordinates = 7;
	string province = 8;
	string timezone = 9;
	repeated string unlocs = 10;
	string code = 11;
}

message PortResponse {
	string id = 1;
	string name = 2;
	string city = 3;
	string country = 4;
	repeated string alias = 5;
	repeated string regions = 6;
	repeated double coordinates = 7;
	string province = 8;
	string timezone = 9;
	repeated string unlocs = 10;
	string code = 11;
}

message GetRequest {
	string name = 1;
}

message Empty {

}
